# pyshgp

./: .gitignore  README.md  flake.nix  pyproject.toml
docs/html/api/: gp.html
examples/: float_regression.py  inspect_test.py  integer_regression.py
examples/stocks/: download_btc_usd.py  download_intc.py  intc_data.csv  stock_regression.py  test.ipynb
examples/test/: big.py  small.py
pyshgp/gp/: estimators.py  evaluation.py  population.py
pyshgp/push/: accessible.py  instruction.py  interpreter.py  types.py  utils.py
pyshgp/push/instructions/: __init__.py  memory.py  numeric.py
tests/gp/: test_translate_validation.py
